melior/src/dialect/snapshots/melior__dialect__memref__tests__cast.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<42xf64>
    %cast = memref.cast %alloca : memref<42xf64> to memref<?xf64>
    return
  }
}

