melior/src/dialect/snapshots/melior__dialect__memref__tests__compile_alloc_and_dealloc.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<index>
    memref.dealloc %alloc : memref<index>
    return
  }
}

