melior/src/dialect/snapshots/melior__dialect__memref__tests__load_with_index.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<1xindex>
    %idx0 = index.constant 0
    %0 = memref.load %alloca[%idx0] : memref<1xindex>
    return
  }
}

