melior/src/dialect/snapshots/melior__dialect__memref__tests__rank.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<1xindex>
    %0 = memref.rank %alloca : memref<1xindex>
    return
  }
}

