melior/src/dialect/snapshots/melior__dialect__memref__tests__view.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<8xi8>
    %idx0 = index.constant 0
    %view = memref.view %alloc[%idx0][] {operand_segment_sizes = array<i32: 1, 1, 0>} : memref<8xi8> to memref<1xi8>
    return
  }
}
